--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-"I don't know if the by-gato.c++ version works because he made it and I didn't test it, but the Python version I made works fine.
+"I don't know if the by-gato.cpp version works because he made it and I didn't test it, but the Python version I made works fine.
